# random-quality

./: README.md  default.nix  shell.nix
generate/: Main.hs  README.md  default.nix  generate.cabal  generate.lua  generate.pl  generate.py  stack.yaml
nix/: generators.nix  nixpkgs.json  nixpkgs.nix
results/: README.md  lua-word32-dieharder  lua5.2.4-word32-practrand  lua5.4.0-word32-practrand  luajit2.1.0beta3-word32-practrand  perl-word32-dieharder  perl-word32-practrand  perl-word32-practrand-4gb  perl-word32-testu01-small  pypy7.1.1beta0-word32-practrand  python-word32-testu01-small  random-double-gjrand-huge  random-double-rademacher-10M  random-word32-split-practrand-1gb  random-word32-split-testu01-smallcrush  random-word32-splita-practrand-1gb  random-word32-splita-practrand-1tb  random-word32-splita-testu01-crush  random-word32-splita-testu01-smallcrush  random-word32-splitl-practrand-1gb  random-word32-splitl-practrand-8gb  random-word32-splitl-testu01-crush  random-word32-splitl-testu01-smallcrush  random-word32-splitr-practrand-1gb  random-word32-splitr-practrand-64gb  random-word32-splitr-testu01-crush  random-word32-splitr-testu01-smallcrush  random-word32-testu01-bigcrush  splitmix-double-gjrand-huge  splitmix-double-rademacher-10M  splitmix-word32-split-practrand-2tb  splitmix-word32-split-testu01-crush  splitmix-word32-splita-testu01-crush  splitmix-word32-splitl-testu01-crush  splitmix-word32-splitr-testu01-crush  splitmix-word32-testu01-bigcrush  splitmix-word64-split-diehard  splitmix-word64-split-gjrand-huge  splitmix-word64-split-practrand-2tb  (+7 more)
(+12 files in other folders)
