cabal-version:       >=1.10

name:                generate
version:             0.1.0.0
build-type:          Simple

executable generate
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.13
                     , bytestring
                     , random
                     , splitmix
  default-language:    Haskell2010
